#172 #287 Rename the major routes of UsersController

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,8 +13,8 @@
       <% end %>
 
       <%= navbar_item 'Home', home_users_path %>
-      <%= navbar_item 'Boards', show_favored_images_users_path %>
-      <%= navbar_item 'Preferences', show_target_words_users_path %>
+      <%= navbar_item 'Boards', boards_users_path %>
+      <%= navbar_item 'Preferences', preferences_users_path %>
       <%= navbar_dropdown 'DEBUG' do %>
         <%= navbar_item 'View all images', images_path %>
         <%= navbar_item 'Debug illust detection', debug_illust_detection_users_path %>
