--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -6,7 +6,7 @@ You can follow a tag to make an image feed related to the tag.
 <br />
 
 <!-- Render the search form -->
-<%= search_form_for @search, url: show_target_words_users_path, html: { method: :post }, remote: true do |f| %>
+<%= search_form_for @search, url: preferences_users_path, html: { method: :post }, remote: true do |f| %>
   <div class="row">
     <div class="col-lg-2">
       <%= f.text_field :titles_name_or_titles_name_english_or_name_or_name_or_name_english_or_name_display_cont, class: "form-control" %>
