--- a/app/views/target_words/edit.html.erb
+++ b/app/views/target_words/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @target_word %> |
-<%= link_to 'Back', show_target_words_users_path %>
+<%= link_to 'Back', preferences_users_path %>
