--- a/app/views/target_words/show.html.erb
+++ b/app/views/target_words/show.html.erb
@@ -7,4 +7,4 @@
 </p>
 
 <%= link_to 'Edit', edit_target_word_path(@target_word) %> |
-<%= link_to 'Back', show_target_words_users_path %>
+<%= link_to 'Back', preferences_users_path %>
