--- a/app/views/users/_popular_tags.html.erb
+++ b/app/views/users/_popular_tags.html.erb
@@ -2,11 +2,13 @@
 <div class="popular-tags">
   <% if people.nil? %>
     <%= popular_tags.each do |target_word| %>
-      <%= bs_button_to target_word.name_english, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { name: target_word.name }}, method: :post, remote: true, class: 'btn btn-default' unless target_word.person.nil? %>
+      <% name = target_word.name ? target_word.name : target_word.name_english %>
+      <%= bs_button_to name, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { name: target_word.name }}, method: :post, remote: true, class: 'btn btn-default' unless target_word.person.nil? %>
     <% end %>
   <% else %>
     <% people.each do |person| %>
-      <%= bs_button_to person.name_english, { controller: 'target_words', action: 'create', id: person.id, target_word: { name: person.name_english }}, method: :post, remote: true, class: 'btn btn-default' %>
+    <% name = person.name ? person.name : person.name_english %>
+      <%= bs_button_to name, { controller: 'target_words', action: 'create', id: person.id, target_word: { name: name }}, method: :post, remote: true, class: 'btn btn-default' %>
     <% end %>
   <% end %>
 </div>
