--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,8 @@
 <div id='footer'>
   <hr>
   <p>(c) 2014 Ispick. All Rights Reserved.</p>
+  <p>
+    <%= link_to 'Privacy Policy', page_path('privacy_policy') %> /
+    <%= link_to 'About us', page_path('about_us') %>
+  </p>
 </div>
