--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -10,14 +10,19 @@
 
 <div class="image-detail">
   Caption: <%= image.caption.html_safe if image.caption %><br />
-  From: <%= link_to "#{image.page_url}", image.page_url.html_safe if image.page_url %>
+  From: <%= link_to "#{image.page_url}", image.page_url.html_safe if image.page_url %><br />
+  Tags:
+  <% image.tags.each do |tag| %>
+    <%= link_to tag.name, { controller: 'users', action: 'search', query: "#{tag.name}" } %>
+  <% end %>
 </div>
 
 <div class="image-share">
   <%# "CA: #{get_jst_string(image.created_at)}".html_safe %><br />
   <%= "PA: #{get_jst_string(image.posted_at)}".html_safe %><br />
-  <%= image_tag(asset_path('icons/facebook_32.png'))%>
-  <%= image_tag(asset_path('icons/twitter_32.png')) %>
+  <!--<% image_tag(asset_path('icons/facebook_32.png'))%>
+  <% image_tag(asset_path('icons/twitter_32.png')) %>
   <%= image_tag(asset_path('icons/pinterest_32.png')) %>
-  <%= image_tag(asset_path('icons/tumblr_32.png')) %>
+  <%= link_to image_tag(asset_path('icons/tumblr_32.png')), { controller: 'users', action: 'share_tumblr', image_id: image.id } %>-->
+  <%= facebook_button %>
 </div>
