--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -5,12 +5,12 @@
 <button class="btn btn-default" style="text-align: right;">
   <span class="glyphicon glyphicon-paperclip" style="vertical-align:middle"></span>
 </button>
-
 <hr>
 
 <div class="image-detail">
   Caption: <%= image.caption.html_safe if image.caption %><br />
   From: <%= link_to "#{image.page_url}", image.page_url.html_safe if image.page_url %><br />
+  Src: <%= link_to "#{image.src_url}", image.src_url.html_safe %><br />
   Tags:
   <% image.tags.each do |tag| %>
     <%= link_to tag.name, { controller: 'users', action: 'search', query: "#{tag.name}" } %>
@@ -24,5 +24,12 @@
   <% image_tag(asset_path('icons/twitter_32.png')) %>
   <%= image_tag(asset_path('icons/pinterest_32.png')) %>
   <%= link_to image_tag(asset_path('icons/tumblr_32.png')), { controller: 'users', action: 'share_tumblr', image_id: image.id } %>-->
-  <%= facebook_button %>
+
+
+  <%= pinit_button(url: image.page_url, media: image.src_url, description: image.caption) %>
+
+  <script src="http://platform.tumblr.com/v1/share.js"></script>
+  <a href="http://www.tumblr.com/share/photo?source=<%=u image.src_url %>&caption=<%=u image.caption %>&clickthru=<%=u image.page_url %>" title="Share on Tumblr" style="display:inline-block; text-indent:-9999px; overflow:hidden; width:20px; height:20px; background:url('http://platform.tumblr.com/v1/share_4.png') top left no-repeat transparent;"></a>
+
+
 </div>
