#281 Organize locations of partial templates
Additionally delete unneeded partials.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/modal' %>
+<%= render 'shared/modal_avatar' %>
 
 <nav class="navbar navbar-default" role="navigation">
   <%= navbar_header brand: image_tag(asset_path('test_logo.png')), brand_link: home_users_path, class: 'logo' %>
