--- a/app/views/shared/_modal_avatar.html.erb
+++ b/app/views/shared/_modal_avatar.html.erb
@@ -1,4 +1,6 @@
-<div class="modal modal-avatar" id="modal-window" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+<!-- Avatar画像設定に使うmodal -->
+
+<div class="modal modal-avatar" id="the-modal-avatar" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
