#281 Use the modal component instead of popover
Update all related files to enable it. No css yet.

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -3,6 +3,7 @@
 <%= stylesheet_link_tag 'users' %>
 <%= stylesheet_link_tag 'images_detail' %>
 <%= render 'shared/modal_image' %>
+<%= render 'shared/modal_board' %>
 
 
 <!-- 表示する画像数とフィルタに関するdropdownを描画 -->
