--- a/app/views/image_boards/_boards.js.erb
+++ b/app/views/image_boards/_boards.js.erb
@@ -1,6 +1,9 @@
 //= require 'modal_boards'
 
-console.log('AJAXing: '+"<%= @id %>");
+$(".modal-boards .modal-body").html("<%= escape_javascript(
+  render partial: 'shared/form_board', locals: { image: @image, image_board: @board, html: @id }) %>");
+$("#modal-board").modal('show');
+/*console.log('AJAXing: '+"<%= @id %>");
 selector = "#" + "<%= @id.to_s %>";
 console.log(selector);
 
@@ -9,4 +12,4 @@ $(selector).popover({
   html: true,
   content: "<%= escape_javascript(render partial: 'shared/popover_board', locals: { image: @image, image_board: @board, html: @id }) %>",
   container: 'body'
-}).popover('show');
+}).popover('show');*/
