--- a/app/views/layouts/_show_image_debug.js.erb
+++ b/app/views/layouts/_show_image_debug.js.erb
@@ -1,2 +1,2 @@
-$(".modal-image.modal-body").html("<%= escape_javascript(render partial: 'layouts/show_image_debug1', locals: { image: @image }) %>");
+$(".modal-image.modal-body").html("<%= escape_javascript(render partial: 'shared/show_image_debug', locals: { image: @image }) %>");
 $("#modal-image").modal('show');
