--- a/app/views/shared/_modal_board.html.erb
+++ b/app/views/shared/_modal_board.html.erb
@@ -1,2 +1,9 @@
 <div class="modal modal-boards" id="modal-board" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
-</div>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <!-- render shared/_modal_board.html.erb from .js.erb here -->
+      </div>
+    </div>
+  </div>
+</div><!-- /.modal -->
