#281 Improve the modal-board
- Add close button
- Fix the backdrop bug

--- a/app/views/shared/_modal_board.html.erb
+++ b/app/views/shared/_modal_board.html.erb
@@ -1,6 +1,8 @@
 <div class="modal modal-boards" id="modal-board" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <br />
       <div class="modal-body">
         <!-- render shared/_modal_board.html.erb from .js.erb here -->
       </div>
