#281 Create the debug_design page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -16,6 +16,15 @@
   float: right;
   width: 150px;
 }
+// for home_debug action
+.time-string-debug {
+  font-size: 8px;
+  line-height: 8px;
+  text-align: left;
+  align: left;
+  float: left;
+  width: 150px;
+}
 .image-tag {
   float: left;
   align: left;
