--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,6 +19,7 @@
       <%= navbar_item 'Preferences', preferences_users_path %>
       <%= navbar_dropdown 'DEBUG' do %>
         <%= navbar_item 'View all images', images_path %>
+        <%= navbar_item 'Debug design', home_debug_users_path %>
         <%= navbar_item 'Debug illust detection', debug_illust_detection_users_path %>
         <%= navbar_item 'Debug crawling', debug_crawling_users_path %>
         <%= navbar_item 'Tutorial', '/tutorial' %>
