--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -43,7 +43,7 @@
         <div class="title">
           <%= image.title.to_s %><br />
           <div class="time-string">
-            <%= "CA: #{get_jst_string(delivered_image.created_at)}" %><br />
+            <%# "CA: #{get_jst_string(delivered_image.created_at)}" %><br />
             <%= "PA: #{get_jst_string(image.posted_at)}" %>
           </div>
         </div>
