--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -1,37 +1,44 @@
+<%= stylesheet_link_tag 'images_detail' %>
+
 <br />
 <div class="image-title">
   <%= image.title %>
 </div>
-<button class="btn btn-default" style="text-align: right;">
-  <span class="glyphicon glyphicon-paperclip" style="vertical-align:middle"></span>
-</button>
+<%= render_clip_button(image, 'btn') %>
+<%= render_like_button(image, 'btn') %>
 <hr>
 
 <div class="image-detail">
-  Caption: <%= image.caption.html_safe if image.caption %><br />
-  From: <%= link_to "#{image.page_url}", image.page_url.html_safe if image.page_url %><br />
-  Src: <%= link_to "#{image.src_url}", image.src_url.html_safe %><br />
-  Tags:
+  <%= comment_glyphicon %> <%= image.caption.html_safe if image.caption %>
+  <br /><br />
+  <%= link_glyphicon %> <%= link_to "#{image.page_url}", image.page_url.html_safe if image.page_url %>
+  <br /><br />
+  <%= tags_glyphicon %>
   <% image.tags.each do |tag| %>
-    <%= link_to tag.name, { controller: 'users', action: 'search', query: "#{tag.name}" } %>
+    <%= bs_button_to tag.name, { controller: 'users', action: 'search', query: "#{tag.name}" }, class: 'btn-default btn-xs' %>
   <% end %>
 </div>
 
 <div class="image-share">
-  <%# "CA: #{get_jst_string(image.created_at)}".html_safe %><br />
-  <%= "PA: #{get_jst_string(image.posted_at)}".html_safe %><br />
+  <div class="image-time"><%= "Created: #{get_jst_string(image.created_at)}".html_safe %><br /></div>
+  <div class="image-time"><%= "Posted:  #{get_jst_string(image.posted_at)}".html_safe %><br /></div>
 
-  <div class="share_button"><%= tweet_button(count: 'none') %></div>
-  <div class="share_button">
-    <!-- Likeボタンを表示するためにfacebook appをpublicに指定する必要があるので、
-    仮の画像を配置 -->
-    <% image_tag(asset_path('icons/facebook_32.png'))%>
+
+  <div class="share-button"><%= tweet_button(count: 'none') %></div>
+  <div class="share-button">
+    <!-- Likeボタンを表示するためにfacebook appをpublicに指定する必要があるので、仮の画像を配置 -->
+    <%= image_tag(asset_path('icons/facebook_32.png'))%>
     <%# like_button(CONFIG['facebook_app_id'].to_i) %>
   </div>
-  <div class="share_button"><%= pinit_button(url: image.page_url, media: image.src_url, description: image.caption) %></div>
-  <div class="share_button">
+  <div class="share-button"><%= pinit_button(url: image.page_url, media: image.src_url, description: image.caption) %></div>
+  <div class="share-button">
     <script src="http://platform.tumblr.com/v1/share.js"></script>
     <a href="http://www.tumblr.com/share/photo?source=<%=u image.src_url %>&caption=<%=u image.caption %>&clickthru=<%=u image.page_url %>" title="Share on Tumblr" style="display:inline-block; text-indent:-9999px; overflow:hidden; width:20px; height:20px; background:url('http://platform.tumblr.com/v1/share_4.png') top left no-repeat transparent;"></a>
   </div>
 
+</div>
+
+<!-- Insert space -->
+<div style="clear: both;">
+  <br />
 </div>
