--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,3 +1,3 @@
 <!-- モーダル表示で使用している。２つのpartial templateを描画する。 -->
 <%= render partial: 'shared/render_image', locals: { image: @image } %>
-<%= render partial: 'shared/show_image', locals: { image: @image, displaying_image: @image } %>
+<%= render partial: 'shared/show_image', locals: { image: @image } %>
