--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -24,18 +24,18 @@
 <%= paginate @images unless @images.nil? %>
 
 <div class="wrap">
-  <% @images.each_with_index do |delivered_image, index| %>
-    <% image = delivered_image %>
+  <% @images.each_with_index do |image, index| %>
 
     <div class="box">
       <div class="boxInner">
-        <%= render_image(delivered_image) %>
+        <%= render_image(image) %>
 
         <div class="titleBox">
-          <div class="id"><%= delivered_image.id %></div>
+          <div class="id"><%= image.id %></div>
           <%= button_group class: 'pull-right blocks' do %>
-            <%= render_clip_button(delivered_image) %>
-            <%= render_show_debug_button(delivered_image) %>
+            <%= render_clip_button(image) %>
+            <%= render_show_button(image) %>
+            <%= render_show_debug_button(image) %>
           <% end %>
           <br />
         </div>
@@ -43,7 +43,7 @@
         <div class="title">
           <%= image.title.to_s %><br />
           <div class="time-string">
-            <%# "CA: #{get_jst_string(delivered_image.created_at)}" %><br />
+            <%# "CA: #{get_jst_string(image.created_at)}" %><br />
             <%= "PA: #{get_jst_string(image.posted_at)}" %>
           </div>
         </div>
