#282 Fix the bug that modal's content is not working

--- a/app/views/users/home_debug.html.erb
+++ b/app/views/users/home_debug.html.erb
@@ -36,6 +36,7 @@
           <div class="id"><%= delivered_image.id %></div>
           <%= button_group class: 'pull-right blocks' do %>
             <%= render_clip_debug_button(delivered_image) %>
+            <%= render_like_button(delivered_image, 'btn-xs') %>
             <%= render_show_another_button(delivered_image) %>
           <% end %>
           <br />
