--- a/app/views/shared/_form_board.html.erb
+++ b/app/views/shared/_form_board.html.erb
@@ -1,4 +1,8 @@
-<!-- new boardを作るフォーム -->
+<!--
+  <new boardを作るフォーム>
+  variables needed: image, image_board, html
+  Using gem: https://github.com/bootstrap-ruby/rails-bootstrap-forms
+-->
 <div class="id"><%= image.id %></div>
 <div class="html-id"><%# html %></div><!-- debug value -->
 
