#300 Fix manifest files

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,8 @@
  *
  *= require_self
  *= require images
+ *= require images_detail
+ *= require images_debug
  *= require scaffolds
  *= require users
  *= require core
