--- a/app/assets/stylesheets/images_debug.css.scss
+++ b/app/assets/stylesheets/images_debug.css.scss
@@ -1,69 +1,7 @@
-// 以下のクラスは全て画像整列用に使用している：
-// Place all the styles related to the images controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-// デバッグ用画面の画像表示に使用
+// デバッグ用ページのクリップボタン関連のクラス
+// Another version of 'clip' buttons related classes.
+// The other related classes are defined at images.css.scss
 // from: http://goo.gl/zsi5mT
-ul.boxline {
-    padding-left: 0!important;
-    text-align: left;
-    margin: 0 0 15px;
-}
-
-ul.boxline li {
-    width: 76px;
-    display: inline-block;
-    vertical-align: top;
-    white-space: normal;
-    word-wrap: normal;
-    font-size: 12px;
-    line-height: 1.2;
-    margin: 0;
-    padding: 2px;
-}
-
-ul.boxline li img {
-    display: block!important;
-    border: 1px solid #d0a600!important;
-    height: 55px!important;
-    width: 72px!important;
-    margin: 2px!important;
-    padding: 2px!important;
-}
-
-
-// Home画面の画像整列に使用
-// from: http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/
-body {
-   margin: 0;
-   padding: 0;
-   background: #EEE;
-   //font: 10px/13px 'Lucida Sans',sans-serif;
-}
-.wrap {
-   overflow: hidden;
-   margin: 10px;
-}
-.box {
-   float: left;
-   position: relative;
-   width: 20%;
-   padding-bottom: 20%;
-}
-.boxInner {
-   position: absolute;
-   left: 10px;
-   right: 10px;
-   top: 10px;
-   bottom: 10px;
-   overflow: hidden;
-}
-.boxInner img {
-   width: 100%;
-}
-
-// Clip buttons / images' titles related
 .boxInner .titleBoxD {
    position: absolute;
    visibility: hidden;
@@ -97,34 +35,4 @@ body.no-touch .boxInner.hovered .titleBoxD, body.touch .boxInner.touchFocus .tit
    margin-bottom: 0;
    color: #FFF;
    visibility: visible;
-}
-
-
-@media only screen and (max-width : 480px) {
-   /* Smartphone view: 1 tile */
-   .box {
-      width: 100%;
-      padding-bottom: 100%;
-   }
-}
-@media only screen and (max-width : 650px) and (min-width : 481px) {
-   /* Tablet view: 2 tiles */
-   .box {
-      width: 50%;
-      padding-bottom: 50%;
-   }
-}
-@media only screen and (max-width : 1050px) and (min-width : 651px) {
-   /* Small desktop / ipad view: 3 tiles */
-   .box {
-      width: 33.3%;
-      padding-bottom: 33.3%;
-   }
-}
-@media only screen and (max-width : 1290px) and (min-width : 1051px) {
-   /* Medium desktop: 4 tiles */
-   .box {
-      width: 25%;
-      padding-bottom: 25%;
-   }
 }
