--- a/app/views/shared/_render_image.html.erb
+++ b/app/views/shared/_render_image.html.erb
@@ -1,7 +1,7 @@
 <div align="center">
-  <% if image.page_url %>
-    <%= link_to image_tag(image.data.url), image.page_url.html_safe %>
+  <% if image.src_url %>
+    <%= link_to image_tag(image.data.url), image.src_url.html_safe, :target => "_blank" %>
   <% else %>
     <%= image_tag image.data.url %>
-  <% end %>
+, :target => "_blank"  <% end %>
 </div>
