--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/modal_image' %>
 <%= stylesheet_link_tag 'users' %>
-
+<%= render 'shared/modal_board' %>
 
 <!-- Debug情報とボード選択dropdownを描画 -->
 <p>
@@ -10,7 +10,7 @@
   <strong>Total size of clipped images in bytes:</strong>
   <%= @total_size %> MB
   <br />
-  <%= link_to 'Download zip(Debug)', controller: 'users', action: 'download_favored_images' %>
+  <%# link_to 'Download zip(Debug)', controller: 'users', action: 'download_favored_images' %>
   <br />
   <br />
 </p>
@@ -25,6 +25,7 @@
       </li>
     <% end %>
   <% end %>
+  <%= bs_button_to 'Edit this board', edit_image_board_path(id: @image_board.id), remote: true, class: 'btn btn-default' %>
   <%= bs_button_to '<span class="glyphicon glyphicon-remove" style="vertical-align:middle"></span>Delete'.html_safe, @image_board, method: :delete, data: { confirm: 'Are you sure to delete this board? This operation cannot be undone.' }, class: 'btn btn-default' %>
 <% end %>
 
