#294 Add displaying info to the debug template

--- a/app/views/shared/_show_image_debug.html.erb
+++ b/app/views/shared/_show_image_debug.html.erb
@@ -2,7 +2,11 @@
 
 <p>
   <strong>Source URL:</strong>
-  <%= link_to "#{image.src_url}", image.src_url %>
+  <%= link_to "#{image.src_url}", image.src_url %><br />
+  <strong>Page URL:</strong>
+  <%= link_to "#{image.page_url}", image.page_url %><br />
+  <strong>Original URL:</strong>
+  <%= link_to "#{image.original_url}", image.page_url %><br />
 </p>
 
 <p>
