--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,12 @@
+<!--
+  ユーザ情報の編集フォーム
+  - Using gem: https://github.com/bootstrap-ruby/rails-bootstrap-forms
+-->
+
 <%= bootstrap_form_for(@user, control_col: "col-sm-10") do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this target_word from being saved:</h2>
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
       <ul>
       <% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -13,6 +18,12 @@
   <div class="row">
     <div class="col-lg-2">
       <%= f.text_field :name, :required => true, :autofocus => true %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-2">
+      <%= f.select :language_preferences, ['ja', 'en'], { label: "Choose a language:" }, { class: "selectpicker" } %>
     </div>
   </div>
 
