#281 Fix popovers of the another version of home page

--- a/app/views/image_boards/_boards_another.js.erb
+++ b/app/views/image_boards/_boards_another.js.erb
@@ -9,5 +9,13 @@ $(selector).popover({
   html: true,
   content: "<%= escape_javascript(render partial: 'shared/popover_board', locals: { image: @image, image_board: @board, html: @id }) %>",
   container: 'body',
+  placement: 'bottom',
   trigger: 'manual'
 }).popover('show');
+
+// Disable transition temporarily
+console.log($(selector).parentsUntil('.boxInner'));
+console.log($(selector).parents('.boxInner'));
+title = $(selector).parents('.boxInner').children('.titleD');
+console.log(title);
+title.addClass('notransition');
