--- a/app/assets/stylesheets/images_debug.css.scss
+++ b/app/assets/stylesheets/images_debug.css.scss
@@ -4,35 +4,65 @@
 // from: http://goo.gl/zsi5mT
 .boxInner .titleBoxD {
    position: absolute;
-   visibility: hidden;
+   //visibility: hidden;
    bottom: 0px;
    left: 0px;
    right: 0px;
 
-   margin-bottom: 0px;
+   margin-bottom: -100px;
    color: #FFF;
    padding: 10px;
    z-index: 5;
+
+   -webkit-transition: all 0.3s ease-out;
+   -moz-transition: all 0.3s ease-out;
+   -o-transition: all 0.3s ease-out;
+   transition: all 0.3s ease-out;
 }
 .titleD {
   text-align: center;
   position: absolute;
   bottom: 0;
   left: 0;
+
   right: 0;
-  margin-bottom: 0px;
+  margin-bottom: -100px;
   background: #000;
   background: rgba(0, 0, 0, 0.5);
   color: #FFF;
   padding: 10px;
+
+  -webkit-transition: all 0.3s ease-out;
+   -moz-transition: all 0.3s ease-out;
+   -o-transition: all 0.3s ease-out;
+   transition: all 0.3s ease-out;
 }
 body.no-touch .boxInner:hover .titleBoxD, body.touch .boxInner.touchFocus .titleBoxD {
    margin-bottom: 0;
-   color: #FFF;
-   visibility: visible;
+   //color: #FFF;
+   //visibility: visible;
+}
+body.no-touch .boxInner:hover .titleD, body.touch .boxInner.touchFocus .titleD {
+   margin-bottom: 0;
 }
 body.no-touch .boxInner.hovered .titleBoxD, body.touch .boxInner.touchFocus .titleBoxD {
    margin-bottom: 0;
-   color: #FFF;
-   visibility: visible;
+   //color: #FFF;
+   //visibility: visible;
+}
+
+// Will be called from the javasdcript
+.notransition {
+  visibility: visible;
+  margin-bottom: 0px;
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  -ms-transition: none !important;
+  transition: none !important;
+}
+
+.popover-postion {
+  visibility: hidden;
+  left: 125px;
 }
