--- a/app/views/shared/_form_board.html.erb
+++ b/app/views/shared/_form_board.html.erb
@@ -1,17 +1,16 @@
 <!--
-  <new boardを作るフォーム>
-  variables needed: image, image_board, html
-  Using gem: https://github.com/bootstrap-ruby/rails-bootstrap-forms
+  New boardを作るフォーム
+  - variables needed: image, image_board, html
+  - Using gem: https://github.com/bootstrap-ruby/rails-bootstrap-forms
 -->
 <div class="id"><%= image.id %></div>
-<div class="html-id"><%# html %></div><!-- debug value -->
-
 
 <%= bootstrap_form_for image_board, remote: true, url: { controller: 'image_boards', action: 'create' , image: image.id, html_id: html }, class: 'new_board' do |f| %>
   <%= f.text_field :name, layout: :default, placeholder: 'Enter a board name', class: 'new_board_input' %>
   <%= f.submit 'New board', class: "btn btn-primary" %>
 <% end %>
 <br />
+
 <%= bootstrap_form_tag remote: true, url: { controller: 'images', action: 'favor', id: image.id, remote: true, html_id: html }, method: :put, class: 'new_board' do |f| %>
   <% boards = current_user.image_boards.map { |board| board.name } %>
 
