#258 Add sentences a bit

--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,4 +1,12 @@
-Please send us your feedback about this site!<br />
-<br />
-email: ispic6"at mark"gmail.com<br />
-twitter: @_ispic6
+<div style="width:600px;">
+  Ispick is an automatic anime artworks aggregator.<br />
+  Not only you can search images in the database, but also create image feeds based on text tags. We're going to implement image search based on image, using deep neural networks.
+  Our goal is "Letting people see anime artworks they like automatically", and our mission is "Solve problems and improve the world by automation".<br />
+  <br />
+  Now we are ready to improve this website.<br />
+  Please feel free to send us your feedback!<br />
+  <br />
+  blog: ispick.tumblr.com<br />
+  email: ispic6"at mark"gmail.com<br />
+  twitter: @ispic6
+</div>
