--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -13,15 +13,20 @@
   <h3>Connect Account</h3>
   <br />
   <% ['facebook', 'twitter', 'tumblr'].each do |provider| %>
+
     <% providers = current_user.authorizations.pluck(:provider) %>
     <% if providers.include?(provider.to_s) %>
       <% auth = current_user.authorizations.where(provider: provider).first %>
-      <%= bs_button_to "#{provider.to_s.titleize} Connected / #{auth.user_name}", class: 'btn-default disabled btn-block' %>
+      <%= button_group do %>
+        <%= bs_button_to "#{provider.to_s.titleize} Connected / #{auth.user_name}", class: 'btn-default disabled btn-block' %>
+        <%= bs_button_to "Disconnect this account", auth, method: :delete, class: 'btn-default btn-block' %>
+      <% end %>
     <% else %>
       <%= bs_button_to "Sign in with #{provider.to_s.titleize}",
         omniauth_authorize_path('user', provider), class: 'btn-default btn-block' %>
     <% end %>
 
+  <br />
   <br />
   <% end %>
 </div>
