--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,10 +18,11 @@
       <%= navbar_item 'Boards', boards_users_path %>
       <%= navbar_item 'Preferences', preferences_users_path %>
 
+
       <!-- DEBUG paths. Will be removed. -->
       <%= navbar_dropdown 'DEBUG' do %>
+        <%= navbar_item 'DEBUG TOP', index_debug_path %>
         <%= navbar_item 'View all images', images_path %>
-        <%= navbar_item 'Debug top page', index_debug_path %>
         <%= navbar_item 'Debug design', home_debug_path %>
         <%= navbar_item 'Debug illust detection', illust_detection_debug_path %>
         <%= navbar_item 'Debug crawling', crawling_debug_path %>
@@ -30,6 +31,7 @@
         <%= navbar_item 'Resque', '/resque_web/overview' %>
         <%= navbar_item 'Toggle miniprofiler', miniprofiler_debug_path %>
       <% end %>
+
     <% end %>
 
     <%= image_tag(current_user.avatar.url(:thumb), align: 'right', class: 'current-avatar') %>
