--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,8 +8,7 @@
         <li>
           <%= link_to 'Change avatar image', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
         </li>
-        <%= navbar_item 'Settings', settings_users_path(id: current_user.id) %>
-
+        <%= navbar_item 'Settings', settings_users_path %>
         <%= navbar_dropdown_divider %>
         <%= navbar_item 'Log out', destroy_user_session_path %>
       <% end %>
