--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -2,7 +2,7 @@
 
 <br />
 <div class="image-title">
-  <%= image.title %>
+  <%= strip_tags(image.title) %>
 </div>
 <%= render_clip_button(image, 'btn') %>
 <%= render_like_button(image, 'btn') %>
@@ -11,7 +11,7 @@
 <div class="image-detail">
   <%= pencil_glyphicon %> <%= image.artist ? image.artist : 'Unknown artist' %>
   <br /><br />
-  <%= comment_glyphicon %> <%= image.caption if image.caption %>
+  <%= comment_glyphicon %> <%= strip_tags(image.caption) if image.caption %>
   <br /><br />
   <%= link_glyphicon %> <%= link_to "#{image.page_url}", image.page_url.html_safe, :target => "_blank" if image.page_url %>
   <br /><br />
