#80 #291 Move all debug related actions to DebugController
Also move all debug related templates to views/debug directory.

--- a/app/views/debug/home.html.erb
+++ b/app/views/debug/home.html.erb
@@ -39,7 +39,7 @@
 
           <%= button_group class: 'pull-right blocks' do %>
             <%= render_clip_debug_button(delivered_image) %>
-            <%= render_like_button(delivered_image, 'btn-xs') %>
+            <%# render_like_button(delivered_image, 'btn-xs') %>
             <%= render_show_another_button(delivered_image) %>
           <% end %>
           <br />
