--- a/app/views/users/_popular_tags.html.erb
+++ b/app/views/users/_popular_tags.html.erb
@@ -1,9 +1,9 @@
 <h3>Popular tags</h3>
 <div class="popular-tags">
   <% if people.nil? %>
-    <%= popular_tags.each do |target_word| %>
+    <% popular_tags.each do |target_word| %>
       <% name = target_word.get_name(current_user.language_preferences) %>
-      <%= bs_button_to name, { controller: 'target_words', action: 'attach', id: target_word.id }, method: :post, remote: true, class: 'btn btn-default' unless target_word.person.nil? %>
+      <%= bs_button_to(name, { controller: 'target_words', action: 'attach', id: target_word.id }, method: :post, remote: true, class: 'btn btn-default') unless target_word.person.nil? %>
     <% end %>
   <% else %>
     <% people.each do |person| %>
