--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -4,10 +4,10 @@
   Not only you can search images in the database, but also you can create image feeds based on certain text tags. Currently there are a lot of anime artwork related sites, and most of artworks in them remain unseen. For now, this problem is partly solved by manual aggregating taken place in websites like Tumblr / Pinterest. <br />
   <br />
   However over the long term we believe we can help you more by providing our automated system, as Google did in years ago. For now it only supports image search by limited text tags, but we're planning to implement image search based on image, using deep neural networks.
-  Our goal is "Letting people see anime artworks they like automatically", and our mission is "Solve problems and improve the world by intelligent, automated systems".<br />
+  Our goal is "Letting people see anime artworks they like automatically", and our mission is "To solve problems and improve the world by intelligent, automated systems".<br />
   <br />
-  We are at the very first stage and the system is not optimised yet. But we continue improving this site with your response! We are ready to receive feedbacks.<br />
-  Please feel free to send us yours! Thanks in advance.<br />
+  We are at the very first stage and the system need to be adjusted or changed a lot. So we continue improving this site with your response! We are ready to receive feedbacks.<br />
+  Please feel free to send us yours! Thank you.<br />
   <br />
   blog: ispick.tumblr.com<br />
   email: ispic6"at mark"gmail.com<br />
