--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,6 +1,9 @@
 <!-- モーダル表示をせずに直接templateを描画する場合に使う。-->
+<%= javascript_include_tag 'users_home' %>
+<%= javascript_include_tag 'core' %>
 <%= stylesheet_link_tag 'users' %>
 <%= stylesheet_link_tag 'images_detail' %>
+<%= render 'shared/modal_board' %>
 
 <!-- モーダル表示で使用している。２つのpartial templateを描画する。 -->
 <div class="detail-wrap">
