--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -6,8 +6,8 @@
   However over the long term we believe we can help you more by providing our automated system, as Google did in years ago. For now it only supports image search by limited text tags, but we're planning to implement image search based on image, using deep neural networks.
   Our goal is "Letting people see anime artworks they like automatically", and our mission is "To solve problems and improve the world by intelligent, automated systems".<br />
   <br />
-  We are at the very first stage and the system need to be adjusted or changed a lot. So we continue improving this site with your response! We are ready to receive feedbacks.<br />
-  Please feel free to send us yours! Thank you.<br />
+  Since we are at the very first stage and the system need to be adjusted or changed a lot, we've decided that we continue improving this site with your feedbacks.<br />
+  So please feel free to send us yours! Thank you for reading this.<br />
   <br />
   blog: ispick.tumblr.com<br />
   email: ispic6"at mark"gmail.com<br />
