--- a/app/views/layouts/_reload_followed_tags.js.erb
+++ b/app/views/layouts/_reload_followed_tags.js.erb
@@ -1,3 +1,1 @@
-//$(".wrapper-followed-tags").html('<%= escape_javascript(render :partial => "users/followed_tags", :locals => { target_words: @target_words}) %>');
-//$(".wrapper-followed-tags").html('<%= escape_javascript(render :partial => "users/followed_tags", :locals => { tags: @tags }) %>');
-$(".wrapper-followed-tags").html('<%= escape_javascript(render :partial => "users/followed_tags", collection: @tags) %>');
+$(".wrapper-followed-tags").html('<%= escape_javascript(render :partial => "users/followed_tags", locals: { tags: @tags, test: "test0" }) %>');
