#317 Fix buttons at preferences page

--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -29,7 +29,7 @@ You can follow a tag to make an image feed related to the tag.
 
 <!-- Render followed tags in the partial -->
 <div class="wrapper-followed-tags">
-  <%= render partial: 'users/followed_tags', locals: { tags: @tags } %>
+  <%= render partial: 'users/followed_tags', locals: { tags: @tags, test: 'test0' } %>
 </div>
 
 
