--- a/app/views/users/_popular_tags.html.erb
+++ b/app/views/users/_popular_tags.html.erb
@@ -1,13 +1,20 @@
 <h3>Popular tags</h3>
 <div class="popular-tags">
   <% if tags_result.nil? %>
+
     <% popular_tags.each do |tag| %>
-      <%# name = tag.get_name(current_user.language_preferences) %>
-      <%= bs_button_to(tag.name, { controller: 'tags', action: 'attach', id: tag.id }, method: :post, remote: true, class: 'btn btn-default') %>
+      <%= button_group do %>
+        <%= bs_button_to tag.name, images_tag_path(tag), class: 'btn-default' %>
+        <%= bs_button_to plus_glyphicon, { controller: 'tags', action: 'attach', id: tag.id }, method: :post, remote: true, class: 'btn-default' %>
+      <% end %>
     <% end %>
   <% else %>
     <% tags_result.each do |tag| %>
-      <%= bs_button_to tag.name, { controller: 'tags', action: 'attach', id: tag.id }, method: :post, remote: true, class: 'btn btn-default' %>
+      <%= button_group do %>
+        <%= bs_button_to tag.name, images_tag_path(tag), class: 'btn-default' %>
+        <%= bs_button_to plus_glyphicon, { controller: 'tags', action: 'attach', id: tag.id }, method: :post, remote: true, class: 'btn btn-default' %>
+      <% end %>
+      <%= ' ' %>
     <% end %>
   <% end %>
 </div>
