--- a/app/views/users/_followed_tags.html.erb
+++ b/app/views/users/_followed_tags.html.erb
@@ -2,8 +2,8 @@
 <div class="followed-tags">
   <% tags.each do |tag| %>
     <%= button_group do %>
-      <%= bs_button_to tag.name, delete_tag_users_path({ id: tag.id }), method: :delete, remote: true, class: 'btn-default' %>
-      <%# bs_button_to '<span class="glyphicon glyphicon-remove" style="vertical-align:middle"></span>'.html_safe, delete_tag_users_path({ id: tag.id }), method: :delete, remote: true, class: 'btn-default' %>
+      <%= bs_button_to tag.name, images_tag_path(tag), class: 'btn-default' %>
+      <%= bs_button_to '<span class="glyphicon glyphicon-remove" style="vertical-align:middle"></span>'.html_safe, delete_tag_users_path({ id: tag.id }), method: :delete, remote: true, class: 'btn-default' %>
     <% end %>
   <% end %>
 </div>
