#301 Update the footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div id='footer'>
   <hr>
-  <p>(c) 2014 Ispick. All Rights Reserved.</p>
+  <p>2014-2020 Ispick by pentiumx.</p>
   <p>
     <%= link_to 'Privacy Policy', page_path('privacy_policy') %> /
     <%= link_to 'About us', page_path('about_us') %>
