#258 Add 'Term of Service' page
- Modify the footer format
- Change the intro sentence at top page

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <div id='footer'>
   <hr>
-  <p>2014-2020 Ispick by pentiumx.</p>
-  <p>
+  <p>2014-2020 Ispick.
     <%= link_to 'Privacy Policy', page_path('privacy_policy') %> /
+    <%= link_to 'Term of Service', page_path('term_of_service') %> /
     <%= link_to 'About us', page_path('about_us') %>
   </p>
 </div>
