#301 Remove the DEBUG dropdown from the header

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,24 +16,11 @@
       <%= navbar_item 'Home', home_users_path %>
       <%= navbar_item 'Boards', boards_users_path %>
       <%= navbar_item 'Preferences', preferences_users_path %>
-
-
-      <!-- DEBUG paths. Will be removed. -->
-      <%= navbar_dropdown 'DEBUG' do %>
-        <%= navbar_item 'DEBUG TOP', index_debug_path %>
-        <%= navbar_item 'View all images', images_path %>
-        <%= navbar_item 'Debug design', home_debug_path %>
-        <%= navbar_item 'Debug illust detection', illust_detection_debug_path %>
-        <%= navbar_item 'Debug crawling', crawling_debug_path %>
-        <%= navbar_item 'Tutorial', '/tutorial' %>
-        <%= navbar_item 'Top page', '/' %>
-        <%= navbar_item 'Resque', '/resque_web/overview' %>
-        <%= navbar_item 'Toggle miniprofiler', miniprofiler_debug_path %>
-      <% end %>
-
     <% end %>
 
-    <%= image_tag(current_user.avatar.url(:thumb), align: 'right', class: 'current-avatar') %>
-
+    <div style="text-align:right;">
+      <%= "Hi, #{current_user.name}!" %>
+      <%= image_tag(current_user.avatar.url(:thumb), class: 'current-avatar') %>
+    </div>
   <% end %>
 </nav>
