--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,6 +3,6 @@
   <p>2014-2020 Ispick.
     <%= link_to 'Privacy Policy', page_path('privacy_policy') %> /
     <%= link_to 'Term of Service', page_path('term_of_service') %> /
-    <%= link_to 'About us', page_path('about_us') %>
+    <%= link_to 'About us', new_contact_path %>
   </p>
 </div>
