--- a/app/views/pages/signup_with_password.html.erb
+++ b/app/views/pages/signup_with_password.html.erb
@@ -1,5 +1,4 @@
-<h1><strong>Ispick v0.3</strong></h1>
-<p>Ispick is an illustration aggregation service!</p>
+<%= render partial: 'shared/top_description' %>
 
 <div class="top-image">
   <%= link_to (image_tag asset_path('top_madoka.jpg')), '/', style: " z-index: 1;"%>
@@ -14,7 +13,7 @@
       <%= bs_button_to 'Create an account with Email', '/sign_up', class: "btn btn-default btn-block" %><br>
     <% end %>
   </div>
-  <br>
+  <%= render partial: 'shared/warning' %>
   <div align="center">
     <%= bs_button_to 'Login', '/signin_with_password', class: 'btn-mini btn-default' %>
   </div>
