--- a/app/views/pages/term_of_service.html.erb
+++ b/app/views/pages/term_of_service.html.erb
@@ -9,6 +9,8 @@
 
 
 
+<p><strong>Data Resets</strong></p>
+<p>During the beta version, we are not responsible for saving users' data or taking over the users' data.</p>
 
 
 <p><strong>Accounts</strong></p>
@@ -36,13 +38,6 @@
 <p>We may terminate or suspend your account immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
 
 <p>Upon termination, your right to use the Service will immediately cease. If you wish to terminate your account, you may simply discontinue using the Service.</p>
-
-
-<p><strong>Governing Law</strong></p>
-
-<p>These Terms shall be governed and construed in accordance with the laws of Japan, without regard to its conflict of law provisions.</p>
-
-<p>Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</p>
 
 <p><strong>Changes</strong></p>
 
