#301 Fix the logo's link

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/modal_avatar' %>
 
 <nav class="navbar navbar-default" role="navigation">
-  <%= navbar_header brand: image_tag(asset_path('test_logo.png')), brand_link: home_users_path, class: 'logo' %>
+  <%= navbar_header brand: image_tag(asset_path('test_logo.png')), brand_link: '/', class: 'logo' %>
   <%= navbar_collapse do %>
     <%= navbar_group class: 'User', id: 'menu' do %>
       <%= navbar_dropdown 'User' do %>
