--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -9,7 +9,7 @@
 <!-- Render images and the dropdown for filtering them -->
 <p>
   <%= "You don't seem to follow any tags yet. Let\'s follow them at the Preferences page! <br /><i>Showing recently created images:</i>".html_safe if current_user.tags.count == 0 %>
-  <%= bs_dropdown_button_to 'Filters' do %>
+  <%= bs_dropdown_button_to list_glyphicon do %>
     Filter by date
     <div class="input-group date" style="width: 200px;" align="right">
       <input type="text" class="form-control" disabled><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
