--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -1,40 +1,42 @@
 <%= stylesheet_link_tag 'users' %>
 
+<div class="container-fluid">
+  <div class="col-md-12">
+  <h2>Preferences</h2>
+  <div class="col-md-4">Search a tag to follow!</div>
+  <br />
 
-<h2>Preferences</h2>
-You can follow a tag to make an image feed related to the tag.
-<br />
-
-<!-- Render the search form -->
-<%= search_form_for @search, url: preferences_users_path, html: { method: :post }, remote: true do |f| %>
-  <div class="row">
-    <div class="col-lg-2">
+  <!-- Render the search form -->
+  <%= search_form_for @search, url: preferences_users_path, html: { method: :post }, remote: true do |f| %>
+    <div class="col-md-4">
       <%= f.text_field :name_cont, class: "form-control" %>
     </div>
+
+    <div class="actions">
+      <%= f.submit 'Search', class: "btn btn-default" %>
+    </div>
+  <% end %>
+  <br />
+
+
+  <!-- Render popular tags or search result in the partial -->
+  <div class="wrapper-popular-tags">
+    <%= render partial: 'users/popular_tags', locals: { tags_result: @tags_result, popular_tags: @popular_tags } %>
   </div>
-  <div class="actions">
-    <%= f.submit 'Search', class: "btn btn-default" %>
+
+  <div class="arrow">></div>
+
+  <!-- Render followed tags in the partial -->
+  <div class="wrapper-followed-tags">
+    <%= render partial: 'users/followed_tags', locals: { tags: @tags, test: 'test0' } %>
   </div>
-<% end %>
-<br />
 
 
-<!-- Render popular tags or search result in the partial -->
-<div class="wrapper-popular-tags">
-  <%= render partial: 'users/popular_tags', locals: { tags_result: @tags_result, popular_tags: @popular_tags } %>
+  <!-- Insert space -->
+  <div style="clear: both;">
+    <br />
+    <br />
+    <br />
+  </div>
 </div>
-
-<div class="arrow">></div>
-
-<!-- Render followed tags in the partial -->
-<div class="wrapper-followed-tags">
-  <%= render partial: 'users/followed_tags', locals: { tags: @tags, test: 'test0' } %>
-</div>
-
-
-<!-- Insert space -->
-<div style="clear: both;">
-  <br />
-  <br />
-  <br />
 </div>
