--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -5,28 +5,31 @@
 
 
 <!-- name/language等の編集フォーム -->
-<h3>Edit Account</h3>
-<%= render 'form' %>
+<div class="container-fluid">
+  <div class="col-md-4">
+    <h3>Edit Account</h3>
+    <%= render 'form' %>
 
 <!-- linkされているSNSアカウントを表示する -->
-<div style="width: 300px;">
-  <h3>Connect Account</h3>
-  <br />
-  <% ['facebook', 'twitter', 'tumblr'].each do |provider| %>
 
-    <% providers = current_user.authorizations.pluck(:provider) %>
-    <% if providers.include?(provider.to_s) %>
-      <% auth = current_user.authorizations.where(provider: provider).first %>
-      <%= button_group do %>
-        <%= bs_button_to "#{provider.to_s.titleize} Connected / #{auth.user_name}", class: 'btn-default disabled btn-block' %>
-        <%= bs_button_to "Disconnect this account", auth, method: :delete, class: 'btn-default btn-block' %>
+    <h3>Connect Account</h3>
+    <br />
+    <% ['facebook', 'twitter', 'tumblr'].each do |provider| %>
+
+      <% providers = current_user.authorizations.pluck(:provider) %>
+      <% if providers.include?(provider.to_s) %>
+        <% auth = current_user.authorizations.where(provider: provider).first %>
+        <%= button_group do %>
+          <%= bs_button_to "#{provider.to_s.titleize} Connected / #{auth.user_name}", class: 'btn-default disabled btn-block' %>
+          <%= bs_button_to "Disconnect this account", auth, method: :delete, class: 'btn-default btn-block' %>
+        <% end %>
+      <% else %>
+        <%= bs_button_to "Sign in with #{provider.to_s.titleize}",
+          omniauth_authorize_path('user', provider), class: 'btn-default btn-block' %>
       <% end %>
-    <% else %>
-      <%= bs_button_to "Sign in with #{provider.to_s.titleize}",
-        omniauth_authorize_path('user', provider), class: 'btn-default btn-block' %>
-    <% end %>
 
-  <br />
-  <br />
-  <% end %>
+    <br />
+    <br />
+    <% end %>
+  </div>
 </div>
